--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,16 @@
     padding: 1rem;
     display: block;
 }
+
+.output {
+    border: 1px solid black;
+    height: 10vh;
+    width: 70%;
+    margin: 2rem 1rem;
+    padding: 1rem;
+    display: block;
+}
+
+#btn-translate {
+margin: 1rem;
+}
