--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,105 @@
-.textArea {
-    width: 70%;
-    height: fit-content;
-    margin: 2rem 1rem;
-    padding: 1rem;
+@import url('https://fonts.googleapis.com/css2?family=Boogaloo&family=Cinzel:wght@600&display=swap');
+
+:root {
+    --primary-color: #990000;
+    --secondary-color: #FF9F45;
+    --dark-grey:  #231f20;
+    --white: #ffffff;
+}
+
+body{
+    background-color: var(--white);
+    font-family: 'Cinzel', serif;
+    margin: 0rem;
+}
+
+
+.navigation{
+    background-color: var(--primary-color);
+    color: var(--white);
+    text-align: center;
+    font-size: 40px;
+    height: 6rem;
+}
+
+.navigation .navImg{
+    text-align: center;
+    height: 6rem;
+    object-fit: contain;
+}
+
+.right-column{
+    text-align: center;
+    margin-right: 2rem;
     display: block;
+}
+.heading{
+    font-size: 30px;
+    text-align: center;
+    color: var(--dark-grey);
+    margin: 1rem;
+    /* display: inline; */
+}
+
+.heading2{
+    font-size: 30px;
+    text-align: center;
+    color: var(--dark-grey);
+    margin: 1rem;
+    /* display: inline; */
+}
+
+.textArea {
+    width: 25%;
+    min-height: 20vh;
+    margin: auto;
+    padding: 1rem;
+    /* display: inline; */
+    border: 2px solid var(--secondary-color);
+    border-radius: 5px;
+    margin: 3rem;
+}
+
+.btn-translate {
+    background-color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
+    border-radius: 10px;
+    font-size: 25px;
+    padding: 8px;
+    /* display: inline; */
+    font-family: 'Cinzel', serif;
+    color: var(--primary-color);
+    margin: 1rem auto;
 }
 
 .output {
-    border: 1px solid black;
-    height: 10vh;
-    width: 70%;
-    margin: 2rem 1rem;
+    width: 30%;
+    min-height: 10vh;
+    margin: auto;
     padding: 1rem;
-    display: block;
+    /* display: inline; */
+    border: 2px solid var(--secondary-color);
+    border-radius: 5px;
 }
 
-#btn-translate {
-margin: 1rem;
+.footer {
+    background-color: var(--primary-color);
+    padding: 1rem;
+    margin-top: 2rem;
+    /* margin-bottom: 0rem; */
+}
+
+.footer-heading {
+    font-size: 30px;
+    text-align: center;
+    color: var(--white);
+}
+
+.footer-container {
+    font-size: 15px;
+    text-align: center;
+    max-width: 1200px;
+    margin: auto;
+    color: var(--white);
+
 }
