--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,12 @@ body {
 .navigation {
   background-color: var(--primary-color);
   color: var(--white);
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  height: 4rem;
   text-align: center;
-  font-size: 40px;
-  height: 6rem;
+  font-size: 3rem;
 }
 
 .navigation .navImg {
@@ -29,7 +32,6 @@ body {
 
 .right-column {
   text-align: center;
-  margin-right: 2rem;
   display: block;
 }
 .heading {
@@ -47,19 +49,18 @@ body {
 }
 
 .textArea {
-  width: 25%;
-  min-height: 20vh;
+  width: 30rem;
+  min-height: 5rem;
   margin: auto;
   padding: 1rem;
-  /* display: inline; */
   border: 2px solid var(--secondary-color);
   border-radius: 5px;
-  margin: 3rem;
+  margin: 1rem 3rem 2rem 3rem;
 }
 
 .btn-wrapper {
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .btn-translate {
@@ -79,11 +80,10 @@ body {
 }
 
 .output {
-  width: 30%;
-  min-height: 10vh;
+  width: 30rem;
+  min-height: 6rem;
   margin: auto;
   padding: 1rem;
-  /* display: inline; */
   border: 2px solid var(--secondary-color);
   border-radius: 5px;
 }
@@ -92,7 +92,6 @@ body {
   background-color: var(--primary-color);
   padding: 1rem;
   margin-top: 2rem;
-  /* margin-bottom: 0rem; */
 }
 
 .footer-heading {
@@ -101,10 +100,14 @@ body {
   color: var(--white);
 }
 
+.footer-content {
+  margin: 1rem 0;
+}
+
 .footer-container {
   font-size: 15px;
   text-align: center;
-  max-width: 1200px;
   margin: auto;
   color: var(--white);
+  width: 60%;
 }
